added images to image folder and basic SEO tags

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Kianna Reneau</title>
+    <title>Reneau Wellness</title>
+    <!-- Primary Meta Tags -->
+    <meta name="description"
+        content="Discover expert health and wellness tips, including nutrition, fitness, mental well-being, and self-care strategies for a healthier lifestyle.">
+    <meta name="keywords"
+        content="health and wellness, holistic health, healthy living, wellness lifestyle, mental wellness, physical health, nutrition and wellness, self care, mindfulness">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.reneauwellness.com">
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <!-- <meta property="og:title" content="Health & Wellness Tips for a Balanced Life">
+    <meta property="og:description"
+        content="Explore holistic health and wellness practices including fitness, nutrition, mindfulness, and self-care to improve your well-being.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.reneauwellness.com">
+    <meta property="og:image" content="https://www.yoursite.com/images/health-wellness.jpg"> -->
+
+    <!-- Twitter -->
+    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Health & Wellness Tips for a Balanced Life">
+    <meta name="twitter:description"
+        content="Expert guidance on fitness, nutrition, mindfulness, and self-care for total well-being.">
+    <meta name="twitter:image" content="https://www.yoursite.com/images/health-wellness.jpg"> -->
+
 </head>
+
 <body>
     <h1>Welcome to Kiki's</h1>
     <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
