--- a/index.html
+++ b/index.html
@@ -4,40 +4,305 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Renau Wellness</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Reneau Wellness</title>
-    <!-- Primary Meta Tags -->
-    <meta name="description"
-        content="Discover expert health and wellness tips, including nutrition, fitness, mental well-being, and self-care strategies for a healthier lifestyle.">
-    <meta name="keywords"
-        content="health and wellness, holistic health, healthy living, wellness lifestyle, mental wellness, physical health, nutrition and wellness, self care, mindfulness">
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.reneauwellness.com">
-
-    <!-- Robots -->
-    <meta name="robots" content="index, follow">
-
-    <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:title" content="Health & Wellness Tips for a Balanced Life">
-    <meta property="og:description"
-        content="Explore holistic health and wellness practices including fitness, nutrition, mindfulness, and self-care to improve your well-being.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.reneauwellness.com">
-    <meta property="og:image" content="https://www.yoursite.com/images/health-wellness.jpg"> -->
-
-    <!-- Twitter -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Health & Wellness Tips for a Balanced Life">
-    <meta name="twitter:description"
-        content="Expert guidance on fitness, nutrition, mindfulness, and self-care for total well-being.">
-    <meta name="twitter:image" content="https://www.yoursite.com/images/health-wellness.jpg"> -->
-
 </head>
 
 <body>
-    <h1>Welcome to Kiki's</h1>
-    <script src="./assets/js/app.js"></script>
+
+    <!-- HERO SECTION -->
+    <section class="hero" style="background-image: url('assets/images/hero.jpeg');">
+        <div class="hero-text text-center">
+            <h1 class="fs-1 fs-md-1 fs-lg-0 mb-3 heading-primary">GET READY FOR THE SHIFT ✨</h1>
+            <p class="fs-5 heading-subtext" style="color: var(--pink);">Because this isn’t another diet — it’s a
+                lifestyle upgrade.</p>
+        </div>
+    </section>
+
+    <!-- TWO-COLUMN LIFESTYLE SECTION -->
+    <section class="container-fluid serif-text">
+        <div class="row">
+            <!-- Section 1: Black background, white text -->
+            <div class="col-12 col-md-6 bg-black d-flex align-items-center justify-content-center p-4 p-md-5">
+                <p class="fs-4 text-start">
+                    This approach has literally changed the way I eat, move, and live and if you’ve been stuck in cycles
+                    of starting over, this is about to feel different.
+                </p>
+            </div>
+
+            <!-- Section 2: Pink background, black text -->
+            <div class="col-12 col-md-6 bg-pink d-flex align-items-center justify-content-center p-4 p-md-5">
+                <ul class="checkmark fs-4 text-start">
+                    <li>No obsession.</li>
+                    <li>No punishment.</li>
+                    <li>No “I’ll start Monday.”</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- STANDARDS GRID -->
+    <section class="container-fluid py-5">
+        <div class="row g-4">
+
+            <div class="col-12 col-lg-6">
+                <div class="card h-100 bg-white text-dark p-4">
+                    <h2 class="mb-4">THIS ISN’T ABOUT SALADS — IT’S ABOUT STANDARDS</h2>
+                    <ul class="text-start" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>“I know what to eat, I just can’t stay consistent”</li>
+                        <li>“I lose weight… then gain it back”</li>
+                        <li>“Healthy living feels exhausting”</li>
+                    </ul>
+                    <h3 class="mb-3">You’re not broken — your system just doesn’t fit your real life.</h3>
+                    <ul class="text-start" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>Weight loss that sticks</li>
+                        <li>Structure without restriction</li>
+                        <li>Confidence without obsession</li>
+                        <li>And a lifestyle that actually feels good</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6">
+                <div class="card h-100 bg-lightpink text-dark p-4">
+                    <h2 class="mb-4">WHAT’S AVAILABLE FOR YOU</h2>
+                    <p class="fs-5 mb-2">You don’t need to do everything at once.<br>You just need to start in the right
+                        place.</p>
+                    <p class="fs-5 mb-2">✨ FREE STARTER OPTION</p>
+                    <p class="fs-5 mb-2">The Starter Shift (Free Guide)</p>
+                    <p class="fs-5 mb-2">This guide walks you through:</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>How to stop starting over</li>
+                        <li>How to simplify eating without stress</li>
+                        <li>How to build habits that support weight loss naturally</li>
+                    </ul>
+                    <p class="fs-5 mb-3">Perfect if you want clarity without commitment (yet).</p>
+                    <a href="assets/pdf/starter-guide.pdf" download class="btn btn-pink btn-lg">👉 Download the Free
+                        Guide</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- OFFERS GRID (3 Sections side by side on large screens) -->
+    <section class="container-fluid py-5">
+        <div class="row g-4">
+
+            <!-- Free Starter Option -->
+            <div class="col-12 col-lg-4">
+                <div class="card h-100 bg-white text-dark p-4 text-center">
+                    <h3 class="mb-2">✨ FREE STARTER OPTION</h3>
+                    <h4 class="mb-3">The Starter Shift (Free Guide)</h4>
+                    <p class="mb-2">This guide walks you through:</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>How to stop starting over</li>
+                        <li>How to simplify eating without stress</li>
+                        <li>How to build habits that support weight loss naturally</li>
+                    </ul>
+                    <p class="mb-3">Perfect if you want clarity without commitment (yet).</p>
+                    <a href="assets/pdf/starter-guide.pdf" download class="btn btn-pink btn-lg">👉 Download the Free
+                        Guide</a>
+                </div>
+            </div>
+
+            <!-- Core Digital Offer -->
+            <div class="col-12 col-lg-4">
+                <div class="card h-100 bg-lightpink text-dark p-4 text-center">
+                    <h3 class="mb-2">✨ CORE DIGITAL OFFER</h3>
+                    <h4 class="mb-3">Eating Healthy on a Budget</h4>
+                    <p class="mb-2">This isn’t a “meal plan.” It’s a real-life nutrition system.</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>How to eat well without overspending</li>
+                        <li>How to structure meals that support weight loss</li>
+                        <li>How to stay consistent without feeling deprived</li>
+                        <li>How to stop negotiating with yourself every day</li>
+                    </ul>
+                    <p class="mb-3">This is for women who want results without draining their bank account or their
+                        energy.</p>
+                    <a href="#" class="btn btn-black btn-lg">👉 Get the Ebook</a>
+                </div>
+            </div>
+
+            <!-- Premium Support -->
+            <div class="col-12 col-lg-4">
+                <div class="card h-100 bg-black text-white p-4 text-center">
+                    <h3 class="mb-2">✨ PREMIUM SUPPORT</h3>
+                    <h4 class="mb-3">45-Minute Lifestyle Reset Call</h4>
+                    <p class="mb-2">This is where everything clicks. In this private call, we:</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>Assess your current habits</li>
+                        <li>Simplify your nutrition approach</li>
+                        <li>Map a lifestyle that supports your goals</li>
+                        <li>Remove the confusion keeping you stuck</li>
+                    </ul>
+                    <p class="mb-3">No fluff. No judgment. Just direction.</p>
+                    <a href="#" class="btn btn-pink btn-lg">👉 Book My 45-Minute Call</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- WHY THIS WORKS + WHO THIS IS FOR GRID -->
+    <section class="container-fluid py-5">
+        <div class="row g-4">
+            <div class="col-12 col-lg-6">
+                <div class="card h-100 bg-white text-dark p-4">
+                    <h2 class="mb-4">WHY THIS WORKS (WHEN EVERYTHING ELSE DIDN’T)</h2>
+                    <p class="mb-2">Most weight loss plans focus on discipline.</p>
+                    <p class="mb-2">This focuses on:</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>Identity</li>
+                        <li>Structure</li>
+                        <li>Lifestyle alignment</li>
+                    </ul>
+                    <p class="mb-2">Weight loss becomes the byproduct — not the fight.</p>
+                    <p>You’re not forcing yourself into change.<br> You’re stepping into a new normal.</p>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6">
+                <div class="card h-100 bg-lightpink text-dark p-4">
+                    <h2 class="mb-4">WHO THIS IS FOR</h2>
+                    <p class="mb-2">This is for you if:</p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>You’re tired of starting over</li>
+                        <li>You want weight loss without extremes</li>
+                        <li>You want to feel confident in your body</li>
+                        <li>You’re ready for lifestyle change, not quick fixes</li>
+                    </ul>
+                    <p class="mb-2">This is NOT for:</p>
+                    <ul class="text-start" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>Crash dieting</li>
+                        <li>Extreme restriction</li>
+                        <li>People looking to be “fixed”</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- REAL TALK -->
+    <section class="container-fluid bg-white text-darkbrand py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 text-center text-md-start">
+                <h2 class="mb-4">REAL TALK</h2>
+                <p class="mb-3">You don’t need more motivation.</p>
+                <p class="mb-3">You don’t need more information.</p>
+                <p>You need a system that fits your life — and the confidence to live differently.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ SECTION -->
+    <section class="container-fluid bg-lightpink text-darkbrand py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <h2 class="mb-4 text-center text-md-start">FAQ</h2>
+                <div class="accordion" id="faqAccordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="faqHeading1">
+                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
+                                Q: Is this only for weight loss?
+                            </button>
+                        </h2>
+                        <div id="faq1" class="accordion-collapse collapse" aria-labelledby="faqHeading1"
+                            data-bs-parent="#faqAccordion">
+                            <div class="accordion-body fs-5">
+                                A: Weight loss is part of it — but this is really about lifestyle change. The weight
+                                follows.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="faqHeading2">
+                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
+                                Q: Do I have to eat perfectly?
+                            </button>
+                        </h2>
+                        <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faqHeading2"
+                            data-bs-parent="#faqAccordion">
+                            <div class="accordion-body fs-5">
+                                A: No. Perfection is not required here — consistency is.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="faqHeading3">
+                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
+                                Q: Is this extreme or restrictive?
+                            </button>
+                        </h2>
+                        <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faqHeading3"
+                            data-bs-parent="#faqAccordion">
+                            <div class="accordion-body fs-5">
+                                A: Absolutely not. This is designed for real life.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="faqHeading4">
+                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
+                                Q: Where should I start?
+                            </button>
+                        </h2>
+                        <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faqHeading4"
+                            data-bs-parent="#faqAccordion">
+                            <div class="accordion-body fs-5">
+                                A: Start with the free guide. If you want deeper support, the ebook or call will take
+                                you further.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FINAL LINE -->
+    <section class="container-fluid bg-black text-white py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 text-center text-md-start">
+                <h2 class="mb-4">FINAL LINE</h2>
+                <p class="mb-3">You don’t need another reset.</p>
+                <p>You need a lifestyle that finally makes sense.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="container-fluid bg-dark text-white py-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 text-center text-md-start">
+                <h5 class="mb-3">Renau Wellness</h5>
+                <ul class="list-unstyled fs-6 mb-0">
+                    <li><a href="assets/pdf/starter-guide.pdf" download class="text-white text-decoration-none">Download
+                            the Free Guide</a></li>
+                    <li><a href="#" class="text-white text-decoration-none">Get the Ebook</a></li>
+                    <li><a href="#" class="text-white text-decoration-none">Book My 45-Minute Call</a></li>
+                    <li><a href="#" class="text-white text-decoration-none">Support</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-md-8 text-center text-md-start">
+                <small class="text-white-50">&copy; 2026 Renau Wellness. All rights reserved.</small>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
