--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renau Wellness</title>
+    <!-- Primary Meta Tags -->
+    <title>Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women</title>
+    <meta name="title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <meta name="description"
+        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <meta property="og:description"
+        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+    <meta property="og:image" content="https://yourdomain.com/assets/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yourdomain.com/">
+    <meta property="twitter:title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <meta property="twitter:description"
+        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+    <meta property="twitter:image" content="https://yourdomain.com/assets/images/og-image.jpg">
+
+    <!-- General SEO -->
+    <meta name="keywords"
+        content="Renau Wellness, Women's Health, Lifestyle Upgrade, Sustainable Weight Loss, Nutrition System, Healthy Habits, Confidence, Wellness Guide, Free Wellness Guide, Premium Support">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Renau Wellness">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -12,6 +39,53 @@
 </head>
 
 <body>
+    <!-- Navbar Section -->
+    <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
+        <div class="container">
+            <!-- Brand -->
+            <a class="navbar-brand serif-font" href="#hero">Renau Wellness</a>
+
+            <!-- Toggler for mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#offers">Offers</a>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#faq">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.instagram.com/kiannathebody/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-instagram" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.tiktok.com/@kiannathebody">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-tiktok" viewBox="0 0 16 16">
+                                <path
+                                    d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z" />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- HERO SECTION -->
     <section class="hero" style="background-image: url('assets/images/hero.jpeg');">
@@ -90,7 +164,7 @@
     </section>
 
     <!-- OFFERS GRID (3 Sections side by side on large screens) -->
-    <section class="container-fluid py-5">
+    <section class="container-fluid py-5" id="offers">
         <div class="row g-4">
 
             <!-- Free Starter Option -->
@@ -200,7 +274,7 @@
     </section>
 
     <!-- FAQ SECTION -->
-    <section class="container-fluid bg-lightpink text-darkbrand py-5">
+    <section class="container-fluid bg-lightpink text-darkbrand py-5" id="faq">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h2 class="mb-4 text-center text-md-start">FAQ</h2>
@@ -280,7 +354,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="container-fluid bg-dark text-white py-5">
+    <footer class="container-fluid bg-dark text-white py-5" id="contact">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 text-center text-md-start">
                 <h5 class="mb-3">Renau Wellness</h5>
