updated site text and styles

--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-    <title>Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women</title>
-    <meta name="title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <title>Reneau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women</title>
+    <meta name="title" content="Reneau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
     <meta name="description"
-        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+        content="Reneau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourdomain.com/">
-    <meta property="og:title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <meta property="og:title" content="Reneau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
     <meta property="og:description"
-        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+        content="Reneau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
     <meta property="og:image" content="https://yourdomain.com/assets/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yourdomain.com/">
-    <meta property="twitter:title" content="Renau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
+    <meta property="twitter:title" content="Reneau Wellness | Lifestyle, Nutrition & Sustainable Weight Loss for Women">
     <meta property="twitter:description"
-        content="Renau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
+        content="Reneau Wellness helps women create a sustainable lifestyle and nutrition system that supports natural weight loss, confidence, and lasting habits. Start with our free guide, core digital offer, or premium support.">
     <meta property="twitter:image" content="https://yourdomain.com/assets/images/og-image.jpg">
 
     <!-- General SEO -->
     <meta name="keywords"
-        content="Renau Wellness, Women's Health, Lifestyle Upgrade, Sustainable Weight Loss, Nutrition System, Healthy Habits, Confidence, Wellness Guide, Free Wellness Guide, Premium Support">
+        content="Reneau Wellness, Women's Health, Lifestyle Upgrade, Sustainable Weight Loss, Nutrition System, Healthy Habits, Confidence, Wellness Guide, Free Wellness Guide, Premium Support">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Renau Wellness">
+    <meta name="author" content="Reneau Wellness">
 
 
     <!-- Bootstrap CSS -->
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
         <div class="container">
             <!-- Brand -->
-            <a class="navbar-brand serif-font" href="#hero">Renau Wellness</a>
+            <a class="navbar-brand serif-font" href="#hero">Reneau Wellness</a>
 
             <!-- Toggler for mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -357,7 +357,7 @@
     <footer class="container-fluid bg-dark text-white py-5" id="contact">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 text-center text-md-start">
-                <h5 class="mb-3">Renau Wellness</h5>
+                <h5 class="mb-3">Reneau Wellness</h5>
                 <ul class="list-unstyled fs-6 mb-0">
                     <li><a href="assets/pdf/starter-guide.pdf" download class="text-white text-decoration-none">Download
                             the Free Guide</a></li>
@@ -369,7 +369,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-8 text-center text-md-start">
-                <small class="text-white-50">&copy; 2026 Renau Wellness. All rights reserved.</small>
+                <small class="text-white-50">&copy; 2026 Reneau Wellness. All rights reserved.</small>
             </div>
         </div>
     </footer>
