added images to page

--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
         </div>
     </section>
 
+    <!-- Image 1 -->
+    <div class="container img-container"><img class="img" src="./assets/images/img1.jpeg" alt=""></div>
+
+
     <!-- OFFERS GRID (3 Sections side by side on large screens) -->
     <section class="container-fluid py-5" id="offers">
         <div class="row g-4">
@@ -222,6 +226,9 @@
         </div>
     </section>
 
+    <!-- Image 2 -->
+    <div class="container img-container"><img class="img" src="./assets/images/img2.jpeg" alt=""></div>
+
     <!-- WHY THIS WORKS + WHO THIS IS FOR GRID -->
     <section class="container-fluid py-5">
         <div class="row g-4">
@@ -260,6 +267,9 @@
             </div>
         </div>
     </section>
+
+    <!-- Image 3 -->
+    <div class="container img-container"><img class="img" src="./assets/images/img3.jpeg" alt=""></div>
 
     <!-- REAL TALK -->
     <section class="container-fluid bg-white text-darkbrand py-5">
