updated with text corrections

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-instagram" viewBox="0 0 16 16">
                                 <path
-                                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.430-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.430-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.130-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                             </svg>
                         </a>
                     </li>
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6">
+            <!-- <div class="col-12 col-lg-6">
                 <div class="card h-100 bg-lightpink text-dark p-4">
                     <h2 class="mb-4">WHAT’S AVAILABLE FOR YOU</h2>
                     <p class="fs-5 mb-2">You don’t need to do everything at once.<br>You just need to start in the right
@@ -158,6 +158,35 @@
                     <a href="assets/pdf/starter-guide.pdf" download class="btn btn-pink btn-lg">👉 Download the Free
                         Guide</a>
                 </div>
+            </div> -->
+            <div class="col-12 col-lg-6">
+                <div class="card h-100 bg-lightpink text-dark p-4">
+                    <h2 class="mb-4">✨ START WHERE YOU ARE</h2>
+                    <p class="fs-5 mb-2">
+                        You don’t need to change your whole life overnight.<br>
+                        You just need the right tools in front of you.
+                    </p>
+                    <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
+                        <li>Simple, realistic weight-loss tools that actually stick.</li>
+                        <li>Done-for-you guides that remove confusion around food.</li>
+                        <li>Wellness resources designed for real life, real bodies, real schedules.</li>
+                        <li>Supportive offers that meet you where you are — not where you “should” be.</li>
+                    </ul>
+
+                    <p class="fs-5 mt-3">
+                        Whether you want structure, clarity, accountability, or a reset — there’s something here for
+                        you.
+                    </p>
+
+                    <p class="mb-3">
+                        Perfect if you’re tired of starting over and ready to move forward your way.
+                    </p>
+
+                    <a href="https://stan.store/Reneauwellness" class="btn btn-pink btn-lg">
+                        Explore All Guides &amp; Services
+                    </a>
+
+                </div>
             </div>
 
         </div>
@@ -172,7 +201,7 @@
         <div class="row g-4">
 
             <!-- Free Starter Option -->
-            <div class="col-12 col-lg-4">
+            <!-- <div class="col-12 col-lg-4">
                 <div class="card h-100 bg-white text-dark p-4 text-center">
                     <h3 class="mb-2">✨ FREE STARTER OPTION</h3>
                     <h4 class="mb-3">The Starter Shift (Free Guide)</h4>
@@ -186,10 +215,41 @@
                     <a href="assets/pdf/starter-guide.pdf" download class="btn btn-pink btn-lg">👉 Download the Free
                         Guide</a>
                 </div>
+            </div> -->
+            <div class="col-12 col-lg-4">
+                <div class="card h-100 bg-white text-dark p-4 text-center">
+                    <h3 class="mb-2">✨ START HERE</h3>
+                    <h4 class="mb-3">
+                        The 24-Hour Reset: Start Today, Not Monday<br>
+                        <span class="fw-normal">(FREE eBook)</span>
+                    </h4>
+
+                    <p class="mb-2">This guide walks you through:</p>
+
+                    <ul class="checkmark text-start mb-3">
+                        <li>How to reset your eating without restriction or overwhelm</li>
+                        <li>What to do when motivation is low but you still want results</li>
+                        <li>A simple, realistic structure that helps you feel lighter today</li>
+                        <li>How to stop waiting for the “perfect time” and start now</li>
+                    </ul>
+
+                    <p class="mb-2">This isn’t a diet.</p>
+                    <p class="mb-2">
+                        It’s a reset for women who are tired of starting over.
+                    </p>
+
+                    <p class="mb-2">
+                        Perfect if you want quick clarity, instant direction, and a win you can feel in 24 hours.
+                    </p>
+                    <a href="https://stan.store/Reneauwellness/p/free-24hour-reset-ebook" class="btn btn-pink btn-lg">
+                        👉🏽 Get the Free eBook
+                    </a>
+                </div>
+
             </div>
 
             <!-- Core Digital Offer -->
-            <div class="col-12 col-lg-4">
+            <!-- <div class="col-12 col-lg-4">
                 <div class="card h-100 bg-lightpink text-dark p-4 text-center">
                     <h3 class="mb-2">✨ CORE DIGITAL OFFER</h3>
                     <h4 class="mb-3">Eating Healthy on a Budget</h4>
@@ -204,13 +264,42 @@
                         energy.</p>
                     <a href="#" class="btn btn-black btn-lg">👉 Get the Ebook</a>
                 </div>
+            </div> -->
+            <div class="col-12 col-lg-4">
+                <div class="card h-100 bg-lightpink text-dark p-4 text-center">
+                    <h3 class="mb-2">
+                        ✨ THE EATING HEALTHY ON A BUDGET BLUEPRINT
+                    </h3>
+
+                    <p class="mb-2">
+                        This isn’t a strict meal plan.<br>
+                        It’s a real-life system for eating well without overspending or burning out.
+                    </p>
+
+                    <p class="mb-2 fw-semibold">This blueprint shows you:</p>
+
+                    <ul class="checkmark text-start mb-3">
+                        <li>How to eat healthy without blowing your grocery budget</li>
+                        <li>How to stop the daily “what should I eat?” mental negotiation</li>
+                        <li>How to make food decisions once — and reuse them all week</li>
+                    </ul>
+
+                    <p class="mb-2">
+                        This is for women who want results without draining their bank account or their energy.
+                    </p>
+                    <a href="https://stan.store/Reneauwellness/p/eat-healthy-without-overspending-ebook"
+                        class="btn btn-black btn-lg">
+                        👉🏽 Get the Blueprint
+                    </a>
+                </div>
+
             </div>
 
             <!-- Premium Support -->
             <div class="col-12 col-lg-4">
                 <div class="card h-100 bg-black text-white p-4 text-center">
                     <h3 class="mb-2">✨ PREMIUM SUPPORT</h3>
-                    <h4 class="mb-3">45-Minute Lifestyle Reset Call</h4>
+                    <h4 class="mb-3">30-Minute Lifestyle Reset Call</h4>
                     <p class="mb-2">This is where everything clicks. In this private call, we:</p>
                     <ul class="text-start mb-3" style="list-style-type: disc; padding-left: 1.5rem;">
                         <li>Assess your current habits</li>
@@ -219,7 +308,8 @@
                         <li>Remove the confusion keeping you stuck</li>
                     </ul>
                     <p class="mb-3">No fluff. No judgment. Just direction.</p>
-                    <a href="#" class="btn btn-pink btn-lg">👉 Book My 45-Minute Call</a>
+                    <a href="https://calendly.com/kiannareneau/30min" class="btn btn-pink btn-lg">👉 Book My 30-Minute
+                        Call</a>
                 </div>
             </div>
 
@@ -268,8 +358,8 @@
         </div>
     </section>
 
-    <!-- Image 3 -->
-    <div class="container img-container"><img class="img" src="./assets/images/img3.jpeg" alt=""></div>
+    <!-- Image 1 -->
+    <div class="container img-container"><img class="img" src="./assets/images/img1.jpeg" alt=""></div>
 
     <!-- REAL TALK -->
     <section class="container-fluid bg-white text-darkbrand py-5">
@@ -284,73 +374,97 @@
     </section>
 
     <!-- FAQ SECTION -->
-    <section class="container-fluid bg-lightpink text-darkbrand py-5" id="faq">
+    <section id="faq" class="container py-5 bg-white">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-8">
-                <h2 class="mb-4 text-center text-md-start">FAQ</h2>
+            <div class="col-12 col-lg-10">
+
+                <h2 class="serif-font text-center mb-4">FAQ</h2>
+
                 <div class="accordion" id="faqAccordion">
+
+                    <!-- FAQ 1 -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="faqHeading1">
-                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
-                                Q: Is this only for weight loss?
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Is this only for weight loss?
                             </button>
                         </h2>
-                        <div id="faq1" class="accordion-collapse collapse" aria-labelledby="faqHeading1"
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#faqAccordion">
-                            <div class="accordion-body fs-5">
-                                A: Weight loss is part of it — but this is really about lifestyle change. The weight
-                                follows.
+                            <div class="accordion-body">
+                                No. Weight loss can happen, but that’s not the only goal. This is about learning how to
+                                eat
+                                in a way that makes you feel better, have more energy, and stop starting over. Many
+                                people
+                                come for weight loss and stay because life finally feels easier around food.
                             </div>
                         </div>
                     </div>
+
+                    <!-- FAQ 2 -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="faqHeading2">
-                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
-                                Q: Do I have to eat perfectly?
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Do I have to eat perfectly?
                             </button>
                         </h2>
-                        <div id="faq2" class="accordion-collapse collapse" aria-labelledby="faqHeading2"
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#faqAccordion">
-                            <div class="accordion-body fs-5">
-                                A: No. Perfection is not required here — consistency is.
+                            <div class="accordion-body">
+                                Absolutely not. There is no “perfect” here. You don’t have to cut out your favorite
+                                foods or
+                                be strict every day. This teaches you how to eat well most of the time — and still enjoy
+                                your life.
                             </div>
                         </div>
                     </div>
+
+                    <!-- FAQ 3 -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="faqHeading3">
-                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
-                                Q: Is this extreme or restrictive?
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Is this extreme or restrictive?
                             </button>
                         </h2>
-                        <div id="faq3" class="accordion-collapse collapse" aria-labelledby="faqHeading3"
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#faqAccordion">
-                            <div class="accordion-body fs-5">
-                                A: Absolutely not. This is designed for real life.
+                            <div class="accordion-body">
+                                No. There are no crazy rules, no cutting entire food groups, and no pressure. Everything
+                                is
+                                simple, flexible, and realistic. If it feels stressful or hard to keep up with, it’s not
+                                part of this system.
                             </div>
                         </div>
                     </div>
+
+                    <!-- FAQ 4 -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="faqHeading4">
-                            <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
-                                Q: Where should I start?
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                Where should I start?
                             </button>
                         </h2>
-                        <div id="faq4" class="accordion-collapse collapse" aria-labelledby="faqHeading4"
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                             data-bs-parent="#faqAccordion">
-                            <div class="accordion-body fs-5">
-                                A: Start with the free guide. If you want deeper support, the ebook or call will take
-                                you further.
+                            <div class="accordion-body">
+                                Start right where you are. You don’t need to wait for Monday or a fresh grocery haul.
+                                The
+                                blueprint shows you exactly what to focus on first so you can build momentum without
+                                feeling
+                                overwhelmed.
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- FINAL LINE -->
     <section class="container-fluid bg-black text-white py-5">
@@ -372,7 +486,7 @@
                     <li><a href="assets/pdf/starter-guide.pdf" download class="text-white text-decoration-none">Download
                             the Free Guide</a></li>
                     <li><a href="#" class="text-white text-decoration-none">Get the Ebook</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Book My 45-Minute Call</a></li>
+                    <li><a href="#" class="text-white text-decoration-none">Book My 30-Minute Call</a></li>
                     <li><a href="#" class="text-white text-decoration-none">Support</a></li>
                 </ul>
             </div>
