updated links in footer

--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
                     <p class="mb-2">
                         Perfect if you want quick clarity, instant direction, and a win you can feel in 24 hours.
                     </p>
-                    <a href="https://stan.store/Reneauwellness/p/free-24hour-reset-ebook" class="btn btn-pink btn-lg">
+                    <a href="https://stan.store/Reneauwellness/p/free-24hour-reset-ebook" target="_blank"
+                        class="btn btn-pink btn-lg">
                         👉🏽 Get the Free eBook
                     </a>
                 </div>
@@ -288,7 +289,7 @@
                         This is for women who want results without draining their bank account or their energy.
                     </p>
                     <a href="https://stan.store/Reneauwellness/p/eat-healthy-without-overspending-ebook"
-                        class="btn btn-black btn-lg">
+                        class="btn btn-black btn-lg" target="_blank">
                         👉🏽 Get the Blueprint
                     </a>
                 </div>
@@ -308,7 +309,8 @@
                         <li>Remove the confusion keeping you stuck</li>
                     </ul>
                     <p class="mb-3">No fluff. No judgment. Just direction.</p>
-                    <a href="https://calendly.com/kiannareneau/30min" class="btn btn-pink btn-lg">👉 Book My 45-Minute
+                    <a href="https://calendly.com/kiannareneau/30min" target="_blank" class="btn btn-pink btn-lg">👉
+                        Book My 45-Minute
                         Call</a>
                 </div>
             </div>
@@ -483,11 +485,15 @@
             <div class="col-12 col-md-8 text-center text-md-start">
                 <h5 class="mb-3">Reneau Wellness</h5>
                 <ul class="list-unstyled fs-6 mb-0">
-                    <li><a href="assets/pdf/starter-guide.pdf" download class="text-white text-decoration-none">Download
+                    <li><a href="https://stan.store/Reneauwellness/p/free-24hour-reset-ebook" download
+                            class="text-white text-decoration-none">Download
                             the Free Guide</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Get the Ebook</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Book My 45-Minute Call</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Support</a></li>
+                    <li><a href="https://stan.store/Reneauwellness/p/eat-healthy-without-overspending-ebook"
+                            target="_blank" class="text-white text-decoration-none">Get the Ebook</a></li>
+                    <li><a href="https://calendly.com/kiannareneau/30min" target="_blank"
+                            class="text-white text-decoration-none">Book My premium call</a></li>
+                    <li><a href="mailto:kianna@reneauwellness.com" class="text-white text-decoration-none">Support</a>
+                    </li>
                 </ul>
             </div>
         </div>
